[project]
name = "whop-course-downloader"
version = "1.0.0"
description = "Download video courses from Whop using Playwright and yt-dlp"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Whop Downloader"},
]
dependencies = [
    "playwright==1.48.0",
    "yt-dlp==2024.10.22",
]

[project.scripts]
whop-downloader = "whop_downloader:main"

[tool.uv]
dev-dependencies = []

[tool.hatch]
build.targets.wheel.packages = ["whop_downloader.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"